syntax = "proto3";

package domain;

option go_package = "pkg/pb;pb";

import "base.proto";

message Customer {
  Entity Entity = 1;
  string id_cognito = 2;
  string name = 3;
}

message CustomerRequest {
  Customer payload = 1;
}

message CustomerResponse {
  Customer response = 1;
}

message CustomerListResponse {
  repeated Customer response = 1;
}

service CustomerService {
  rpc Create(CustomerRequest) returns (CustomerResponse);
  rpc Update(CustomerRequest) returns (CustomerResponse);
  rpc FindAll(CustomerRequest) returns (CustomerListResponse);
  rpc FindOne(CustomerRequest) returns (CustomerResponse);
  rpc Enabled(Entity) returns (CustomerResponse);
  rpc Disable(Entity) returns (CustomerResponse);
}
